# CASTOR

./: .gitignore  ISSUES_REQUIRING_RERUN.md  README.md  REBUTTAL_DEFENSE.md  cli.py  config.py  environment.yml  nohup.out  pyproject.toml  requirements.txt
core/: __init__.py  baselines.py  competitor_graphst.py  competitor_squidpy.py  competitor_stagate.py  competitor_stlearn.py  data_generation.py  evaluation.py  models.py  preprocessing.py  real_data.py  scenarios.py  utils.py
data/generators/: her2st.py
docs/: PAPER_STORY.md  REPRODUCING.md  benchmark_plan.md  competitor_methods.md  ground_truth_datasets.md
experiments/: __init__.py  exp01_cross_detection.py  exp02_competitor.py  exp03_position_accuracy.py  exp04_noise_robustness.py  exp05_independence.py  exp07_ablation.py  exp08_clean_training.py  exp09_clean_training_fixed.py  exp10_multi_scenario.py  exp11_real_data.py  exp12_embedding_comparison.py  exp13_scalability.py  exp14_her2st_validation.py  exp15_full_benchmark.py  exp16_real_data_gene_analysis.py  exp17_her2st_transplantation.py  exp18_interpretability.py  exp19_clustered_ectopic.py  exp20_region_transplantation.py  exp21_prevalence_sensitivity.py  exp22_mixed_anomaly.py  exp23_graph_sensitivity.py  exp24_fp_characterization.py
experiments/visualization/: FIGURE_CAPTIONS_JP.md  __init__.py  common.py
experiments/visualization/fig1/: combined.py  panel_a.py  panel_b.py  panel_c.py  panel_d.py
experiments/visualization/fig10/: combined.py
experiments/visualization/fig11/: combined.py
experiments/visualization/fig2/: combined.py  panel_a.py  panel_b.py  panel_c.py
experiments/visualization/fig3/: __init__.py  combined.py  panel_a.py  panel_b.py  panel_c.py
experiments/visualization/fig4/: __init__.py  combined.py  panel_a.py  panel_b.py  panel_c.py
experiments/visualization/fig5/: __init__.py  combined.py  panel_a.py  panel_b.py  panel_c.py
experiments/visualization/fig6/: __init__.py  combined.py  panel_a.py  panel_b.py  panel_c.py  panel_d.py
experiments/visualization/fig7/: __init__.py  combined.py  panel_a.py  (+3 more)
src/castor/: __init__.py  _utils.py  api.py  cli.py  config.py
tests/: test_registry.py
(+61 files in other folders)
